--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405212914">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,8 +60,8 @@
 				</div>
 			</div>
 		</header>
-		<main class="card">
-			<nav class="card__breadcrumbs breadcrumbs">
+		<main class="page-card">
+			<nav class="page-card__breadcrumbs breadcrumbs">
 				<div class="breadcrumbs__container">
 					<ul class="breadcrumbs__list">
 						<li class="breadcrumbs__item">
@@ -79,27 +79,26 @@
 					</ul>
 				</div>
 			</nav>
-			<section class="card__main">
-				<div class="card__container">
-					<div class="card__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</div>
-					<div class="card__code">Код: ISS20301B</div>
-					<div class="card__content">
-						<div class="card__image">
+			<section class="page-card__main main-card">
+				<div class="main-card__container">
+
+					<div class="main-card__content">
+						<div class="main-card__image">
 							<div class="image-product">
 								<!-- Оболонка слайдера -->
 								<div class="image-product__slider swiper">
 									<!-- Частина слайдера, що рухається -->
-									<div class="image-product__wrapper swiper-wrapper">
+									<div data-gallery class="image-product__wrapper swiper-wrapper">
 										<!-- Слайд -->
-										<div class="image-product__slide swiper-slide">
-											<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="photo product"></picture>
-										</div>
-										<div class="image-product__slide swiper-slide">
-											<picture><source data-srcset="img/product/product2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product2.png" alt="photo product"></picture>
-										</div>
-										<div class="image-product__slide swiper-slide">
-											<picture><source data-srcset="img/product/product3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product3.png" alt="photo product"></picture>
-										</div>
+										<a href="img/product/product.png" class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)"></picture>
+										</a>
+										<a href="img/product/product2.png" class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product2.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product2.png" alt="Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)"></picture>
+										</a>
+										<a href="img/product/product3.png" class="image-product__slide swiper-slide">
+											<picture><source data-srcset="img/product/product3.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product3.png" alt="Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)"></picture>
+										</a>
 									</div>
 									<button type="button" class="image-product-prev arrow _icon-arrow"></button>
 									<button type="button" class="image-product-next arrow _icon-arrow"></button>
@@ -124,58 +123,59 @@
 									<button type="button" class="image-preview-prev arrow _icon-arrow"></button>
 									<button type="button" class="image-preview-next arrow _icon-arrow"></button>
 								</div>
+
 							</div>
 						</div>
-					</div>
-
-					<div class="card__info info-card">
-						<div class="info-card__action action-card">
-							<div class="action-card__availability">
-								<div class="action-card__price">199 грн</div>
-								<div class="action-card__in-stock ">В наявності</div>
-								<div class="action-card__out-stock ">Немає в наявності</div>
-							</div>
-							<div class="action-card__quantity">
-								<div data-quantity class="quantity">
-									<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
-									<div class="quantity__input">
-										<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+						<div class="main-card__info info-card">
+							<div class="info-card__action action-card">
+								<div class="info-card__title">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</div>
+								<div class="info-card__code">Код: ISS20301B</div>
+								<div class="action-card__availability">
+									<div class="action-card__price">199 грн</div>
+									<div class="action-card__in-stock ">В наявності</div>
+									<div class="action-card__out-stock ">Немає в наявності</div>
+								</div>
+								<div class="action-card__quantity">
+									<div data-quantity class="quantity">
+										<button data-quantity-minus type="button" class="quantity__button quantity__button_minus"></button>
+										<div class="quantity__input">
+											<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+										</div>
+										<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
 									</div>
-									<button data-quantity-plus type="button" class="quantity__button quantity__button_plus"></button>
+								</div>
+								<button data-cart-in type="submit" class="action-card__button-in button button--blue">
+									<span>Купити</span>
+									<span>В кошику</span>
+								</button>
+								<button data-popup="#order" type="submit" class="action-card__button-out button button--blue">Замовити</button>
+							</div>
+							<div class="info-card__contacts contacts-info">
+								<div class="contacts-info__title">Для уточнення даних зв’яжіться з нами</div>
+								<a href="+380979193134" class="contacts-info__phone">+380 (97) 919-31-34</a>
+								<a href="+380996113391" class="contacts-info__phone">+380 (99) 611-33-91</a>
+								<div class="contacts-info__messenger">
+									<a href="#" class="_icon-viber"></a>
+									<a href="#" class="_icon-whatsap"></a>
+									<a href="#" class="_icon-telegram"></a>
 								</div>
 							</div>
-							<button type="submit" class="action-card__button-in button button--blue">
-								<span>Купити</span>
-								<span>В кошику</span>
-							</button>
-							<button data-popup="#order" type="submit" class="action-card__button-out button button--blue">Замовити</button>
-						</div>
-						<div class="info-card__contacts contacts-info">
-							<div class="contacts-info__title">Для уточнення даних зв’яжіться з нами</div>
-							<a href="+380979193134" class="contacts-info__phone">+380 (97) 919-31-34</a>
-							<a href="+380996113391" class="contacts-info__phone">+380 (99) 611-33-91</a>
-							<div class="contacts-info__messenger">
-								<a href="#" class="_icon-viber"></a>
-								<a href="#" class="_icon-whatsap"></a>
-								<a href="#" class="_icon-telegram"></a>
+							<div class="info-card__return">
+								Повернення товару впродовж 14 днів <a href="">Детальніше</a>
 							</div>
+							<ul class="info-card__line line-info">
+								<li class="line-info__link _icon-cart">
+									<a data-popup="#footer-order" href="#">Замовлення</a>
+								</li>
+								<li class="line-info__link _icon-credit-card">
+									<a data-popup="#footer-payment" href="#">Оплата</a>
+								</li>
+								<li class="line-info__link _icon-truck">
+									<a data-popup="#footer-delivery" href="#">Доставка</a>
+								</li>
+							</ul>
 						</div>
-						<div class="info-card__return">
-							Повернення товару впродовж 14 днів <a href="">Детальніше</a>
-						</div>
-						<ul class="info-card__line line-info">
-							<li class="line-info__link _icon-cart">
-								<a data-popup="#footer-order" href="#">Замовлення</a>
-							</li>
-							<li class="line-info__link _icon-credit-card">
-								<a data-popup="#footer-payment" href="#">Оплата</a>
-							</li>
-							<li class="line-info__link _icon-truck">
-								<a data-popup="#footer-delivery" href="#">Доставка</a>
-							</li>
-						</ul>
 					</div>
-
 				</div>
 			</section>
 		</main>
@@ -826,7 +826,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230405212914"></script>
+	<script src="js/app.min.js?_v=20230407085952"></script>
 </body>
 
 </html>
