--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405212914">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -98,7 +98,7 @@
 									</ul>
 									<div class="info__price-block">
 										<div class="info__price">199 грн</div>
-										<button class="info__cart _icon-cart"></button>
+										<button data-cart-in class="info__cart _icon-cart"></button>
 									</div>
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
@@ -125,7 +125,7 @@
 									</ul>
 									<div class="info__price-block">
 										<div class="info__price">199 грн</div>
-										<button class="info__cart _icon-cart"></button>
+										<button data-cart-in class="info__cart _icon-cart"></button>
 									</div>
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
@@ -151,7 +151,7 @@
 									</ul>
 									<div class="info__price-block">
 										<div class="info__price">199 грн</div>
-										<button class="info__cart _icon-cart"></button>
+										<button data-cart-in class="info__cart _icon-cart"></button>
 									</div>
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
@@ -177,7 +177,7 @@
 									</ul>
 									<div class="info__price-block">
 										<div class="info__price">199 грн</div>
-										<button class="info__cart _icon-cart"></button>
+										<button data-cart-in class="info__cart _icon-cart"></button>
 									</div>
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
@@ -203,7 +203,7 @@
 									</ul>
 									<div class="info__price-block">
 										<div class="info__price">10300 грн</div>
-										<button class="info__cart _icon-cart"></button>
+										<button data-cart-in class="info__cart _icon-cart"></button>
 									</div>
 									<button data-popup="#order" class="info__order button">Замовити</button>
 								</div>
@@ -1319,7 +1319,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230405212914"></script>
+	<script src="js/app.min.js?_v=20230407085952"></script>
 </body>
 
 </html>
