--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230405212914">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230407085952">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -189,7 +189,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -218,7 +218,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -244,7 +244,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -270,7 +270,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">56 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -296,7 +296,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">10300 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -322,7 +322,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -349,7 +349,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -377,7 +377,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -403,7 +403,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -429,7 +429,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -455,7 +455,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">10300 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -481,7 +481,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -506,7 +506,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -531,7 +531,7 @@
 										</ul>
 										<div class="info__price-block">
 											<div class="info__price">199 грн</div>
-											<button class="info__cart _icon-cart"></button>
+											<button data-cart-in class="info__cart _icon-cart"></button>
 										</div>
 										<button data-popup="#order" class="info__order button">Замовити</button>
 									</div>
@@ -1207,7 +1207,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230405212914"></script>
+	<script src="js/app.min.js?_v=20230407085952"></script>
 </body>
 
 </html>
